# iceberg-rust-namespace-exists

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  docker-compose.yaml
src/: main.rs
